<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
	 <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/about"
        android:title="@string/delete"/>
	 
	  <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/about"
        android:title="@string/share"/>
	  
	   <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/about"
        android:title="@string/favorite"/>
	   
	    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/about"
        android:title="@string/backup"/>
	 
</menu>
