<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_sync_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btLinkDropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_synctab_btlink"
            android:text="@string/btlink"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btUnlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_synctab_btunlink"
            android:text="@string/btunlink"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/bg_sync"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/enablemanualsync"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/toggleManualSync"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_toggle"
            android:text=""
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/synchronizationoptions"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/toggleAutoSync"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/toggleManualSync"
            android:background="@drawable/selector_toggle"
            android:text=""
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/toggleManualSync"
            android:layout_marginTop="20dp"
            android:text="@string/enableautosync"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkboxAllcalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/toggleAutoSync"
            android:layout_marginTop="21dp"
            android:button="@drawable/selector_checkbox"
            android:text="@string/allcalls"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkboxFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkboxAllcalls"
            android:layout_alignBottom="@+id/checkboxAllcalls"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textView4"
            android:button="@drawable/selector_checkbox"
            android:text="@string/favoritecalls"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/btRunCleanUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="@drawable/selector_btcleanup"
        android:text="@string/runcleanup"
        android:textColor="@color/white" />

</RelativeLayout>