<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#212634"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a3f5e"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/enablecallrecording"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/toggleEnableCall"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@drawable/selector_toggle"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#263349"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/tvNumberPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/audioquality"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvNumberPhone"
            android:layout_below="@+id/tvNumberPhone"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radButton_Low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/low" 
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/radButton_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radButton_High"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/white" />
        </RadioGroup>

    </RelativeLayout>

</LinearLayout>